--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/astavka"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:ignore="MissingTranslation"
@@ -12,13 +13,16 @@
     <Button
         android:id="@+id/btn_transfer"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/item_selector_button_blue"
+        android:background="@drawable/item_selector_button_side_theme"
+        android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="10dp"
         android:text="@string/btn_transfer_main_activity"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
@@ -33,19 +37,21 @@
     <Button
         android:id="@+id/btn_stock_assortment"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/item_selector_button_blue"
+        android:background="@drawable/item_selector_button_side_theme"
+        android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="10dp"
         android:text="@string/btn_stock_asl_main_activity"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,13 +60,16 @@
     <Button
         android:id="@+id/btn_inventory"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/item_selector_button_blue"
+        android:background="@drawable/item_selector_button_side_theme"
+        android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="10dp"
         android:text="@string/btn_inventariere_main_activity"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
@@ -75,13 +84,16 @@
     <Button
         android:id="@+id/btn_sales"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/item_selector_button_blue"
+        android:background="@drawable/item_selector_button_side_theme"
+        android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="10dp"
         android:text="@string/btn_sales_main_activity"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
@@ -96,13 +108,16 @@
     <Button
         android:id="@+id/btn_invoice"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/item_selector_button_blue"
+        android:background="@drawable/item_selector_button_side_theme"
+        android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="10dp"
         android:text="@string/btn_invoice_main_activity"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
@@ -117,13 +132,16 @@
     <Button
         android:id="@+id/btn_check_price"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/item_selector_button_blue"
+        android:background="@drawable/item_selector_button_side_theme"
+        android:drawableRight="@drawable/keyboard_arrow_right_white_48dp"
+        android:gravity="start|center_vertical"
+        android:paddingLeft="10dp"
         android:text="@string/btn_check_price"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
@@ -135,4 +153,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_chainStyle="packed" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_stock_assortment"
+        app:srcCompat="@drawable/logo_is" />
 </android.support.constraint.ConstraintLayout>
