--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#034f87</color>
+    <color name="colorPrimary">#003f5e</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#150209</color>
     <color name="colorYelow">#EEF5AB</color>
@@ -13,3 +13,5 @@
     <color name="color_white"></color>
     <color name="color_white_new">#FFFFFF</color>
 </resources>
+<!--004c63-->
+    <!--004263-->
