--- a/app/src/main/res/layout/content_invoice.xml
+++ b/app/src/main/res/layout/content_invoice.xml
@@ -9,17 +9,60 @@
     tools:showIn="@layout/app_bar_invoice"
     tools:ignore="MissingTranslation">
 
+    <ImageButton
+        android:id="@+id/btn_edit_line_invoice"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/item_selector_button_actions"
+        android:contentDescription="@string/todo"
+        app:layout_constraintEnd_toStartOf="@+id/btn_delete_invoice"
+        app:layout_constraintStart_toEndOf="@+id/txt_input_barcode_invoice"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar_invoice"
+        app:srcCompat="@drawable/edit_white_48dp" />
+
+    <TextView
+        android:id="@+id/txtTotal_invoice"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:gravity="end"
+        android:singleLine="true"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_change_stock_invoice"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView6" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="@string/txt_total_all"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_change_stock_invoice"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <LinearLayout
         android:id="@+id/headerLV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:background="@drawable/round_corners_yelow_header"
         android:orientation="horizontal"
         android:padding="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CL_info_asortment_check_price">
+        app:layout_constraintTop_toBottomOf="@+id/btn_write_manual_invoice">
 
         <TextView
             android:id="@+id/textView10"
@@ -45,176 +88,96 @@
 
     <ImageButton
         android:id="@+id/btn_write_manual_invoice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
         android:background="@drawable/item_selector_button_actions"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toStartOf="@+id/btn_touch_open_asl_invoice"
-        app:layout_constraintTop_toBottomOf="@+id/txtBarcode_introdus_invoice"
-        app:srcCompat="@drawable/edit_white_48dp"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar_invoice"
+        app:srcCompat="@drawable/keyboard_white_48dp" />
 
     <TextView
         android:id="@+id/txt_input_barcode_invoice"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:imeOptions="actionDone"
         android:singleLine="true"
         android:textAlignment="center"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_edit_line_invoice"
+        app:layout_constraintStart_toEndOf="@+id/btn_touch_open_asl_invoice"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar_invoice" />
 
     <ImageButton
         android:id="@+id/btn_delete_invoice"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:adjustViewBounds="false"
         android:background="@drawable/item_selector_button_actions"
+        android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtBarcode_introdus_invoice"
-        app:srcCompat="@drawable/delete_white_36dp"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintStart_toEndOf="@+id/btn_edit_line_invoice"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar_invoice"
+        app:srcCompat="@drawable/delete_white_36dp" />
 
     <ImageButton
         android:id="@+id/btn_touch_open_asl_invoice"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:adjustViewBounds="false"
         android:background="@drawable/item_selector_button_actions"
-        app:layout_constraintEnd_toStartOf="@+id/btn_delete_invoice"
-        app:layout_constraintTop_toBottomOf="@+id/txtBarcode_introdus_invoice"
-        app:srcCompat="@drawable/add_white_48dp"
-        android:contentDescription="@string/todo" />
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/CL_info_asortment_check_price"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@drawable/round_corners_transparent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_write_manual_invoice"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtBarcode_introdus_invoice">
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:text="@string/txt_factura_invoice"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/txtfactura_invoice"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/txtfactura_invoice"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-
-            android:layout_marginRight="4dp"
-            android:gravity="end"
-            android:singleLine="true"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView4"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginBottom="4dp"
-            android:text="@string/txt_total_all"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-        <TextView
-            android:id="@+id/txtTotal_invoice"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
-            android:gravity="end"
-            android:singleLine="true"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView6"
-            app:layout_constraintTop_toBottomOf="@+id/txtfactura_invoice" />
-
-    </android.support.constraint.ConstraintLayout>
+        android:contentDescription="@string/todo"
+        app:layout_constraintEnd_toStartOf="@+id/txt_input_barcode_invoice"
+        app:layout_constraintStart_toEndOf="@+id/btn_write_manual_invoice"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar_invoice"
+        app:srcCompat="@drawable/add_white_48dp" />
 
     <ProgressBar
         android:id="@+id/progressBar_invoice"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="10dp"
         android:indeterminate="true"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_input_barcode_invoice" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtBarcode_introdus_invoice"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:gravity="center"
-        android:text=""
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar_invoice" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_edit_line_invoice"
+        app:layout_constraintStart_toEndOf="@+id/btn_touch_open_asl_invoice"
+        app:layout_constraintTop_toBottomOf="@+id/txt_input_barcode_invoice" />
 
     <Button
         android:id="@+id/btn_change_stock_invoice"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/item_selector_button_blue"
         android:text="@string/txt_depozit_nedeterminat"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/btn_ok_invoice"
         app:layout_constraintEnd_toEndOf="parent"
@@ -261,11 +224,16 @@
         android:id="@+id/LL_list_invoice"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
         android:choiceMode="singleChoice"
-        app:layout_constraintBottom_toTopOf="@+id/btn_change_stock_invoice"
+        app:layout_constraintBottom_toTopOf="@+id/txtTotal_invoice"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerLV" />
+        app:layout_constraintTop_toBottomOf="@+id/headerLV"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
