--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -40,6 +40,7 @@
         android:id="@+id/txt_name_of_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="end"
         android:text="@string/nav_header_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/background_light"
@@ -57,6 +58,7 @@
         android:id="@+id/txt_workplace_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="end"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         android:textStyle="bold" />
