--- a/app/src/main/res/layout/show_stock_acumulated_asl.xml
+++ b/app/src/main/res/layout/show_stock_acumulated_asl.xml
@@ -31,6 +31,7 @@
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center|center_vertical"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
             android:textColor="@color/colorPrimary"
