--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -33,8 +33,12 @@
                 android:icon="@drawable/info_black_36dp"
                 android:title="@string/header_obout_program" />
             <item
+                android:id="@+id/menu_help"
+                android:icon="@drawable/help_black_36dp"
+                android:title="@string/help" />
+            <item
                 android:id="@+id/menu_exit"
-                android:icon="@drawable/exit_to_app_black_36dp"
+                android:icon="@drawable/power_settings_new_black_36dp"
                 android:title="@string/item_menu_drawable_exit" />
         </menu>
     </item>
